[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["development-tools::debugging", "embedded", "no-std"]
description = "Ultra lightweight logging framework for resource constrained devices"
documentation = "https://japaric.github.io/stlog/stlog/"
edition = "2018"
keywords = ["ELF", "symtab"]
license = "MIT OR Apache-2.0"
name = "stlog"
readme = "README.md"
repository = "https://github.com/japaric/stlog"
version = "0.3.3"

[features]
max-level-off = []
max-level-error = []
max-level-warning = []
max-level-info = []
max-level-debug = []
max-level-trace = []
spanned = ["stlog-macros/spanned"]

release-max-level-off = []
release-max-level-error = []
release-max-level-warning = []
release-max-level-info = []
release-max-level-debug = []
release-max-level-trace = []

[dependencies]
stlog-macros = { path = "macros", version = "0.1.2" }

[dependencies.void]
default-features = false
version = "1.0.2"

[workspace]
members = ["macros"]
