[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["development-tools::debugging", "embedded", "no-std"]
description = "Macros part of the stlog logging framework"
documentation = "https://japaric.github.io/stlog/stlog_macros/"
keywords = ["log", "symtab", "ELF"]
license = "MIT OR Apache-2.0"
name = "stlog-macros"
repository = "https://github.com/japaric/stlog"
version = "0.1.1"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.8"

[dependencies.syn]
features = ["full"]
version = "0.15.4"

[features]
spanned = []